2003-09-15 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: Off by one when parsing localname of QName 
	* XslAttributeSet.cs: must evaluate used attr sets *BEFORE*
	children (so that they get overriden)

2003-09-15 Ben Maurer  <bmaurer@users.sourceforge.net>

	* GenericOutputter.cs: Output attributes in order recieved; not
	required by spec, but useful for running test cases.

2003-09-14 Oleg Tkachenko <oleg@tkachenko.com>

	* GenericOutputter.cs - fix bug with outputting state.
	* Emitter.cs, TextEmitter.cs, XmlWriterEmitter.cs, Outputter.cs, 
	* TextOutputter.cs - get rid of WriteStartAttribute/WriteEndAttribute.	

2003-09-13 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XslKey.cs, XslTransformProcessor.cs: dont clone
	exprs on use, pass to nav.

2003-09-13 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: pass satic context to Pattern ctor.

2003-08-30 Oleg Tkachenko <oleg@tkachenko.com>

	* New files: 
	GenericOutputter.cs - generic Outputter implementation,
	Attribute.cs - represents outputted attribute,
	Emitter.cs - abstract output emitter,
	TextEmitter.cs - text emitter,
	XmlWriterEmitter.cs - emitter to XmlWriter.
	* Checking of duplicating attributes is done in GenericOutputter.
	* Namespace outputting logic is implemented in GenericOutputter.
	* Outputter.cs: Writing namespace declarations is delegated to 
	derived classes (GenericOutputter).
	* XslOutput.cs: standalone flag is now 3-value enum (NONE, YES, NO).			
	 
2003-08-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslTransformProcessor.cs: evaluate variables at beginning
	when / is current node.

2003-08-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XsltCompiledContext.cs, XslTransformProcessorcs:
	Fix up namespace handeling

2003-08-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XslStylesheet.cs, XsltCompiledContext.cs: Stubs for
	format-number.
	* XslDecimalFormat.cs: Stub for decimal-format.
